# robot_configurations

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SETUP_UR3E.md  package.xml
m1n6s200_moveit_config/: package.xml
m1n6s_robotiq85_moveit_config/: package.xml
m1n6s_robotiq85_moveit_config/config/: controllers.yaml
m1n6s_robotiq85_moveit_config/launch/: m1n6s_robotiq85_demo.launch  planning_context.launch  robotiq_85.launch
moveit_robot_configs/m1n6s200_moveit_config/: package.xml
moveit_robot_configs/m1n6s_robotiq85_moveit_config/: package.xml
moveit_robot_configs/m1n6s_robotiq85_moveit_config/launch/: m1n6s_robotiq85_demo.launch  planning_context.launch
moveit_robot_configs/panda_moveit_config/: package.xml
moveit_robot_configs/ur10_robotiq85_moveit_config/: package.xml
moveit_robot_configs/ur3_robotiq85_moveit_config/: package.xml
moveit_robot_configs/ur3e_robotiq85_moveit_config/: package.xml
moveit_robot_configs/ur5_robotiq85_moveit_config/: package.xml
relaxed_ik_robot_configs/: CMakeLists.txt  README.md  package.xml
relaxed_ik_robot_configs/mico/: mico.urdf  start_here.py
relaxed_ik_robot_configs/mico2/: collision_mico2.yaml  mico2.urdf  start_here.py
relaxed_ik_robot_configs/mico3/: mico3.urdf  start_here.py
relaxed_ik_robot_configs/nao_v4/: collision_nao_v4.yaml  nao_v4.urdf  start_here.py
relaxed_ik_robot_configs/panda/: panda_collision.yaml  start_here.py
relaxed_ik_robot_configs/ur3/: collision_ur3.yaml  start_here.py  ur3.urdf
relaxed_ik_robot_configs/ur3e/: collision_ur3e.yaml  start_here.py  ur3e.urdf
relaxed_ik_robot_configs/ur5/: collision_ur5.yaml  start_here.py  start_here_ur5.py  ur5.urdf
robot_bringup/: CMakeLists.txt  README.md  package.xml
robot_bringup/universal_robots/: ur_common.launch
robot_bringup/universal_robots/ur3e/: bringup.launch
robot_bringup/universal_robots/ur5/: bringup.launch
robot_configurations/: package.xml
robot_description/: CMakeLists.txt  package.xml
robot_description/urdf/universal_robots/: ur3_robotiq_85.urdf.xacro
robot_descriptions/: package.xml
robot_descriptions/urdf/: ur5_robotiq_85.urdf.xacro
ur10_moveit_config/config/: ur10_robotiq_85.srdf
ur10_robotiq85_moveit_config/: package.xml
ur10_robotiq85_moveit_config/launch/: planning_context.launch
ur10_robotiq_85/: CMakeLists.txt  package.xml
ur10_robotiq_85/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml
ur10_robotiq_85/launch/: move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  simulation.launch  trajectory_execution.launch.xml  ur10_robotiq_85_move_group.launch  ur10_robotiq_85_moveit_controller_manager.launch.xml  ur10_robotiq_85_planning_context.launch
ur10_robotiq_85/urdf/: ur10_robotiq_85.urdf.xacro
ur3_moveit_config/config/: controllers.yaml  fake_controllers.yaml
ur3_robotiq85_moveit_config/: package.xml
ur3_robotiq85_moveit_config/launch/: planning_context.launch
ur3_robotiq_85/: CMakeLists.txt  package.xml
ur3_robotiq_85/config/: controllers.yaml  joint_limits.yaml  ur3_robotiq_85.srdf
ur3_robotiq_85/launch/: move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  simulation.launch  trajectory_execution.launch.xml  ur3_robotiq_85_move_group.launch  ur3_robotiq_85_planning_context.launch  (+1 more)
ur3e_robotiq85_moveit_config/: CMakeLists.txt
ur5_robotiq85_moveit_config/: package.xml
ur5_robotiq_85/: CMakeLists.txt  package.xml
(+51 files in other folders)
