<?xml version="1.0"?>
<package>
  <name>relaxed_ik_robot_configs</name>
  <version>1.0.0</version>
  <description>
      RelaxedIK robot configurations + necessary URDFs
  </description>

  <author>Wisc-HCI</author>
  <maintainer email="todo@todo.todo"></maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/Wisc-HCI/robot_configurations</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
