<package>

  <name>m1n6s_robotiq85_moveit_config</name>
  <version>1.0.0</version>
  <description>
     Custom Mico config with robotiq 85 gripper
  </description>
  <author>Wisc-HCI</author>
  <maintainer email="todo@todo.todo"></maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/Wisc-HCI/robot_configurations</url>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>kinova_description</build_depend>
  <run_depend>kinova_description</run_depend>
  <build_depend>robot_descriptions</build_depend>
  <run_depend>robot_descriptions</run_depend>
  <build_depend>robotiq_85_description</build_depend>
  <run_depend>robotiq_85_description</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
